# dbt_cosmos_airflow

./: README.md
1_local_setup/: .gitignore  pyproject.toml
2_data_warehouse/: .user.yml  profiles.yml
2_data_warehouse/p_dw/: dbt_project.yml
2_data_warehouse/p_dw/models/staging/: stg_pedidos.sql
2_data_warehouse/p_dw/seeds/: cadastros.csv
3_airflow/: Dockerfile  docker-compose.override.yml  requirements.txt
3_airflow/dags/: dag.py
3_airflow/dbt/p_dw/models/marts/: _mart__models.yml
