[tool.poetry]
name = "1-local-setup"
version = "0.1.0"
description = ""
authors = ["Mairondc21 <duartemairon@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
dbt-core = "^1.9.6"
dbt-postgres = "^1.9.0"
duckdb = "^1.3.0"
faker = "^37.3.0"
pandas = "^2.3.0"
numpy = "^2.2.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
